syntax = "proto3";

package mailer;

option go_package="monjjubot/databaseproto";

message bookRequest {
  int64 course_id = 1;
  string subject = 2;
}

message bigResponse {
  repeated BookPack bookPacks = 1;
}

message BookPack{
  int64 book_id = 1;
  int64 course_id = 2;
  string subject = 3;
  string book_name = 4;
  string book_link = 5;
}

message registerRequest{
  string chat_id = 1;
  string user_email = 2;
  string vkey = 3;
}

message registerResponse{
  bool status = 1;
  string message = 2;
}


service DatabaseAccessService{
  rpc getBooks(bookRequest) returns (bigResponse) {};
  rpc registerUser(registerRequest) returns (registerResponse) {};
}